--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CQEdit w/CodeMirror</title>
     <link rel="stylesheet" href="./styles/codemirror.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
     <main>
         <!-- <h1>CQEdit med CodeMirror 5</h1> -->
+        <header></header>
         <h1>Kodeeditor</h1>
         <div id="editor">
             <div id="input"></div>
@@ -30,6 +32,5 @@
 <script src="./script/codemirror.js"></script>
 <script src="./script/javascript/javascript.js"></script>
 <script src="./script/editor.js"></script>
-<link rel="stylesheet" href="./styles/style.css">
 
 </html>
